# contentful.py

./: .flake8  .gitignore  .pdm-python  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.rst  catalog-info.yaml  pyproject.toml  requirements.txt  runtests.py  setup.py  tox.ini
.circleci/: config.yml
_docs/: LICENSE  Makefile  conf.py  contentful.rst  index.rst  make.bat  modules.rst
contentful/: __init__.py  array.py  asset.py  asset_key.py  client.py  content_type.py  content_type_cache.py  content_type_field.py  content_type_field_types.py  deleted_asset.py  deleted_entry.py  entry.py  errors.py  locale.py  resource.py  resource_builder.py  space.py  sync_page.py  taxonomy_concept.py  taxonomy_concept_scheme.py  utils.py
contentful/client/: __init__.py  base.py  impl.py  queries.py
contentful/client/transport/: abstract.py  aio.py  compat.py  errors.py  retry.py  sio.py
docs/: .buildinfo  conf.py  contentful.html  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/contentful/: array.html  asset.html  asset_key.html  client.html  content_type.html  content_type_cache.html  content_type_field.html  content_type_field_types.html  deleted_asset.html  deleted_entry.html  entry.html  errors.html  locale.html  resource.html  resource_builder.html  space.html  sync_page.html  taxonomy_concept.html  taxonomy_concept_scheme.html  utils.html
docs/_sources/: contentful.rst.txt  contentful.txt  index.rst.txt  index.txt
docs/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_modules/contentful/: asset.html  client.html  content_type.html  content_type_cache.html  content_type_field.html  content_type_field_types.html  deleted_entry.html  errors.html  locale.html  resource_builder.html  space.html  sync_page.html  utils.html
fixtures/cache/: cache.yaml
fixtures/client/: array_endpoints.yaml  asset.yaml  asset_incoming_references.yaml  assets.yaml  content_type.yaml  content_type_cache.yaml  content_types.yaml  create_asset_key.yaml  entries.yaml  entries_links_to_asset.yaml  entries_links_to_entry.yaml  entries_select.yaml  entry.yaml  entry_incoming_references.yaml  entry_incoming_references_with_query.yaml  entry_not_found.yaml  locales_on_environment.yaml  space.yaml  sync.yaml  taxonomy_concept.yaml  taxonomy_concept_scheme.yaml  taxonomy_concept_schemes.yaml  taxonomy_concepts.yaml
fixtures/fields/: rich_text.yaml  rich_text_lists_with_embeds.yaml  structured_text.yaml  structured_text_lists_with_embeds.yaml
fixtures/integration/: circular-references.yaml  errors-filtered.yaml  issue-11.yaml  issue-4.yaml  issue-41.yaml  json-arrays.yaml
fixtures/link/: resolve_other.yaml  resolve_space.yaml
tests/: __init__.py  array_test.py  asset_key_test.py  asset_test.py  client_test.py  content_type_cache_test.py  content_type_field_test.py  content_type_field_types_test.py  entry_test.py  errors_test.py  locale_test.py  resource_builder_test.py  resource_test.py  space_test.py  sync_page_test.py  taxonomy_concept_scheme_test.py  taxonomy_concept_test.py  test_array.py  test_async_client.py  test_client.py  test_content_type.py  test_content_type_cache.py  test_content_type_field.py  test_content_type_field_types.py  test_deleted_asset.py  test_deleted_entry.py  test_entry.py  test_errors.py  test_locale.py  test_resource.py  test_resource_builder.py  test_space.py  test_sync_page.py  test_utils.py  utils_test.py
tests/fixtures/asset_key/: create.yaml
tests/fixtures/client/: asset.yaml  content_type_cache.yaml  content_types.yaml  entries_links_to_asset.yaml  entries_links_to_entry.yaml  entries_select.yaml  entry.yaml  entry_incoming_references_with_query.yaml  entry_not_found.yaml  sync.yaml  sync_environments.yaml
tests/fixtures/integration/: errors-filtered.yaml  issue-4.yaml
