[project]
name = "contentful"
description = "Contentful Delivery API Client"
authors = [
    {name = "Contentful GmbH", email = "python@contentful.com"}
]
dependencies = [
    "requests>=2.31.0,<3.0",
    "python-dateutil>=2.8.2"
]
requires-python = ">=3.8.1"
readme = "README.rst"
license = {text = "MIT"}
dynamic = ["version"]
keywords = ["contentful", "delivery", "cda", "cms", "content"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/contentful/contentful.py"
Documentation = "https://contentful.github.io/contentful.py/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = {source = "file", path = "contentful/__init__.py"}

[tool.pdm.dev-dependencies]
test = [
    "vcrpy>=4.3.1",
    "coverage>=6.5.0",
    "flake8>=6.1.0",
    "requests-mock>=1.11.0",
    "PyYAML>=6.0.1",
]
docs = [
    "Sphinx>=6.2.1",
    "sphinxcontrib-websupport>=1.2.4",
]

[tool.pdm.scripts]
test = "python runtests.py"
lint = "flake8 --exclude=./docs/conf.py,./.pdm/"
publish = {composite = [
    "pdm build",
    "pdm publish"
]}

[tool.coverage.run]
source = ["contentful"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.flake8]
max-line-length = 180
exclude = ["./docs/conf.py", "./.pdm/", ".tox", "*.egg", "build", "data"]
max-complexity = 10 